<resources>
    // login strings
    <string name="app_name">LearnConnect</string>
    <string name="loginpage_title">Learn Connect</string>
    <string name="login_page_sub_title">Giriş Bilgilerinizi Giriniz</string>
    <string name="login_mail_hint">Mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_remmber_me">Beni Hatırla</string>
    <string name="login_forget_password">Şifremi Unuttum</string>
    <string name="login_btn_txt">Giriş Yap</string>
    <string name="login_no_account_txt">Hesabınız yok mu? <font color="#0961F5">Kayıt Ol</font></string>
    <string name="register_page_sub_title">Kayıt olmak için bilgileriniz girin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>