<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        style="@style/all_page_title_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/loginpage_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_sub_title"
        style="@style/all_page_info_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_page_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <EditText
        android:id="@+id/login_mail"
        style="@style/edittext_Background_style"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/login_mail_hint"
        android:inputType="textEmailAddress"
        android:paddingTop="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_sub_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        app:hintEnabled="false"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_mail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#7D7D7D">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_et"
            style="@style/edittext_Background_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLength="9"
            android:paddingTop="15dp"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/login_rememberMe_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:buttonTint="@color/primaryColor"
        android:padding="12dp"
        android:text="@string/login_remmber_me"
        android:textColor="@color/secondaryBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/loging_forgetPassword_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login_forget_password"
        android:textColor="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/login_rememberMe_cb"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/login_rememberMe_cb"
        app:layout_constraintTop_toTopOf="@+id/login_rememberMe_cb" />

    <Button
        android:id="@+id/login_login_btn"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_btn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_rememberMe_cb" />

    <TextView
        android:id="@+id/login_newaccount_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login_no_account_txt"
        android:textColor="@color/primaryBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_login_btn" />

    <ProgressBar
        android:id="@+id/driverLoginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_newaccount_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>